kubernetes/apps/postgres/namespace.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    goldilocks.fairwinds.com/enabled: "true"
